fixed paddings and margins to avoid horizontal scrollnars, also added anothe minor breackpoint to do the same. Site looks good enough on both screens

--- a/css/styles.css
+++ b/css/styles.css
@@ -45,7 +45,7 @@ article, aside, canvas, details, figcaption, figure, footer, header, hgroup, men
   color: #aaa;
   font-size: 8pt;
   letter-spacing: 1px;
-  padding: 25px;
+  padding: 25px 0 25px 0;
   text-align: center;
   text-transform: uppercase;
 }
@@ -72,7 +72,7 @@ nav h1 a {
     background-color: #eee;
     font-size: 17px;
     margin: 0;
-    width: 100%;
+/*    width: 100%; */
 }
 
 /* Display list items side by side */
@@ -110,7 +110,7 @@ nav h1 a {
   min-height: 5vh;
   background-color: #3397DB;
   align-items: center;
-  padding: 0.5em;
+  padding: 0.5em 0;
 }
 .filter-options h2 {
   color: white;
@@ -194,10 +194,14 @@ nav h1 a {
   z-index: 1000;
 }
 .inside #map-container {
-  background: blue none repeat scroll 0 0;
+  background: #f3f3f3 none repeat scroll 0 0;
   height: 600px;
   width: 45%;
   float: right;
+  margin-right: 20px;
+  margin-left: 20px;
+  margin-top: 65px;
+  margin-bottom: 20px;
 }
 .inside #map {
   background-color: #ccc;
@@ -284,10 +288,22 @@ nav h1 a {
   color: #666;
 }
 
-@media only screen and (max-width:750px) {
-  /* For mobile phones: */
+@media only screen and (max-width:900px) and (min-width: 821px) {
+  inside #map-container {
+    margin: auto;
+    width: 40%;
+  }
   .inside #map-container, .inside #restaurant-container, .inside #reviews-container {
     width:100%;
+    padding: 15px 0 30px;
+  }
+
+}
+
+@media only screen and (max-width:820px) {
+  .inside #map-container, .inside #restaurant-container, .inside #reviews-container {
+    width:100%;
+    padding: 15px 0 30px;
   }
   inside #map-container {
     height: 400px;
